@@ -308,6 +308,8 @@ Unreleased changes (1.0-dev)
 
 115. NUTCH-652 - AdaptiveFetchSchedule#setFetchSchedule doesn't calculate
                  fetch interval correctly. (dogacan)
+
+116. NUTCH-627 - Minimize host address lookup (Otis Gospodnetic)
      
 Release 0.9 - 2007-04-02
 
